# fishstock

./: .gitignore  CONTRIBUTING.md  LICENSE  LOCAL_ENVIRONMENT.md  README.md  fish_stock_desktop_dev_doc.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: mockData.ts  quoteApi.ts
apps/desktop/src/components/: AddSymbolDialog.tsx  CalendarMode.tsx  ExcelMode.tsx  LedgerMode.tsx  LogisticsMode.tsx  MailMode.tsx  ModeSwitcher.tsx  ModeWorkspace.tsx  MonitorMode.tsx  ProjectMode.tsx  SuperDisguiseButton.tsx  WeatherMode.tsx
apps/desktop/src/desktop/: windowMode.ts
apps/desktop/src/disguise/: constants.ts  getDisplayRows.ts
apps/desktop/src/hooks/: useQuotes.ts
apps/desktop/src/store/: appStore.ts
apps/desktop/src/types/: quote.ts  watchItem.ts
scripts/: cleanup-local.sh  dev-local.sh  setup-local.sh
services/quote-gateway/: requirements.txt
services/quote-gateway/app/: main.py
services/quote-gateway/app/providers/: akshare_provider.py  base.py  demo_provider.py  eastmoney_provider.py  efinance_provider.py  tencent_provider.py  tiantian_provider.py  utils.py
services/quote-gateway/app/schemas/: quote.py  symbol.py
services/quote-gateway/app/services/: quote_service.py
