[package]
name = "fishstock"
version = "0.1.0"
description = "FishStock desktop quote disguise tool"
authors = ["FishStock"]
edition = "2021"

[lib]
name = "fishstock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
