[package]
name = "fishstock"
version = "0.1.0"
description = "FishStock desktop quote disguise tool"
authors = ["FishStock"]
edition = "2021"

[lib]
name = "fishstock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
